--- a/conf/postfix.conf
+++ b/conf/postfix.conf
@@ -6,3 +6,12 @@ smtpd_milters=inet:localhost:12301
 non_smtpd_milters=$smtpd_milters
 smtpd_recipient_restrictions=permit_mynetworks, reject_unauth_destination
 smtp_tls_CAfile=/etc/ssl/certs/ca-certificates.crt
+# ------ Enable TLS -------
+smtpd_use_tls = {{USE_TLS}}
+smtpd_tls_key_file = /etc/postfix/certs/privkey.pem
+smtpd_tls_cert_file = /etc/postfix/certs/fullchain.pem
+smtpd_tls_loglevel =  3
+smtpd_tls_received_header = yes
+smtpd_tls_session_cache_timeout = 3600s
+tls_random_source = dev:/dev/urandom
+# ------ END TLS -------
