use directly letsecrypt

--- a/conf/postfix.conf
+++ b/conf/postfix.conf
@@ -10,6 +10,6 @@ smtp_tls_CAfile=/etc/ssl/certs/ca-certificates.crt
 smtp_use_tls={{USE_TLS}}
 smtp_tls_loglevel=3
 smtp_tls_security_level=may
-smtp_tls_key_file = /etc/postfix/certs/privkey.pem
-smtp_tls_cert_file = /etc/postfix/certs/fullchain.pem
+smtp_tls_key_file = /etc/letsencrypt/live/{{DKIM_DOMAIN}}/privkey.pem
+smtp_tls_cert_file = /etc/letsencrypt/live/{{DKIM_DOMAIN}}/fullchain.pem
 # ------ END TLS -------
